# projects

Android-app/large_team_3-devlopment/: README.md  settings.gradle
Android-app/large_team_3-devlopment/app/: build.gradle
Android-app/large_team_3-devlopment/app/release/: output-metadata.json
Android-app/large_team_3-devlopment/app/src/main/: AndroidManifest.xml
Android-app/large_team_3-devlopment/app/src/main/res/drawable/: baseline_arrow_right_alt_24.xml
Android-app/large_team_3-devlopment/app/src/main/res/drawable-v24/: splash_insert.xml
Android-app/large_team_3-devlopment/app/src/main/res/values/: ic_launcher_background.xml  splash_theme.xml  strings.xml  themes.xml
Android-app/large_team_3-devlopment/gradle/wrapper/: gradle-wrapper.properties
c/A1/: Makefile  README.md  helpers.c  main.c  palclone.c  palclone.h
c/A2/: CMakeLists.txt  README.md  definitions.h  resources.h  supermarket.c  vector.c  vector.h
c/A4/: Adventurer.c  Adventurer.h  Makefile  README.md  TreasureKeeper.c  TreasureKeeper.h  util.c  util.h
oop-2/: README.md  docker-compose.yml
oop-2/backend/src/main/java/at/tugraz/oop2/: BackendServer.java  CoordinateTransformer.java  MapServiceServer.java  Members.java  MyNode.java  PolygonResponse.java  Relation.java  Way.java
oop-2/docker/: run.sh
oop-2/middleware/src/main/java/at/tugraz/oop2/: Amenity.java  AmenityGeoJson.java  EventController.java  EventRepository.java  ExceptionController.java  InvalidRequestException.java  Road.java  (+9 more)
oop-2/samples/: A0_ENTITIES.md  A0_RESPONSES.md
oop-2/shared/src/main/proto/: mapservice.proto
(+19 files in other folders)
